--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "module": "app",
-            "cwd" : "./lambda1/",
+            "cwd" : "/Users/anthonytownsend/Dropbox/Desktop/code/chilltown_labs/njtransit-rail-sign-stack/lambda1/",
             "env": {
                 "FLASK_APP": "app.py",
                 "FLASK_DEBUG": "1"
